# GMHTTP-HarmonyOS

./: README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/resfile/cert/: client.key
gmcurl/: CHANGELOG.md  Index.ets  README.md  oh-package-lock.json5  oh-package.json5
gmcurl/libs/arm64-v8a/: libcurl.so.4  libnghttp2.so.14  libssl.so.3
gmcurl/libs/x86_64/: libcurl.so.4  libnghttp2.so.14  libssl.so.3
gmcurl/src/main/: module.json5
gmcurl/src/main/cpp/: CMakeLists.txt  napi_gmcurl.cpp
gmcurl/src/main/cpp/include/: curl.h  typecheck-gcc.h
gmcurl/src/main/cpp/types/libgmcurl/: gmcurl.d.ts  oh-package.json5
gmcurl/src/main/resources/base/element/: string.json
gmcurl/src/ohosTest/: module.json5
gmcurl/src/ohosTest/ets/test/: GmCurl.test.ets  List.test.ets
gmcurl/src/ohosTest/resources/base/element/: string.json
gmcurl/src/ohosTest/resources/resfile/cert/: client.crt  demo1.rsa.trust.pem  rsa.trust.pem
testReoprt/gmcurl/: Test Results - GmCurl_test_ets.html
